--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,13 +1,54 @@
 .Navbar {
+    background-color: #666666;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 20px;
     align-items: center;
+    padding: 1vh 5vw;
+}
+
+.Navbar i {
+    color: white;
+    width: 10%;
+    display: flex;
+    justify-content: center;
+}
+
+.Navbar .Input {
+    width: 60%;
+    margin: 10px;
+}
+
+.Navbar .profileMenu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+}
+
+.Navbar .profileMenu .ProfileMenu {
+    width: 70px;
 }
 
 @media only screen and (min-width: 768px) {
-    .Navbar {
-        flex-direction: row;
+    .Navbar i {
+        width: 10%;
+        display: flex;
+        justify-content: center;
+    }
+    .Navbar .Input {
+        width: 70%;
+        margin: 10px;
+    }
+    .Navbar .profileMenu {
+        width: 20%;
+    }
+    .Navbar .profileMenu .ProfileMenu {
+        width: 90px;
+    }
+}
+
+@media only screen and (min-width: 2560px) {
+    .Navbar .profileMenu .ProfileMenu {
+        width: 30%;
     }
 }
