--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,5 @@
 body,
 html {
-  font-family: Arial, Helvetica, sans-serif
-}
-div {
-  border: 2px solid black;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
 }
