--- a/client/src/components/ProfileMenu/ProfileMenu.css
+++ b/client/src/components/ProfileMenu/ProfileMenu.css
@@ -26,13 +26,22 @@
   width: 60vw;
 }
 
+.ProfileMenu .toggleCreateAccountLink {
+  padding-bottom: 10px;
+}
+
+.ProfileMenu .toggleCreateAccountLink:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .ProfileMenu .Option {
   width: 100%;
   height: 50px;
 }
 
 .ProfileMenu .Input {
-    align-self: center;
+  align-self: center;
 }
 
 @media only screen and (min-width: 768px) {
