--- a/client/src/components/Option/Option.css
+++ b/client/src/components/Option/Option.css
@@ -1,8 +1,11 @@
 .Option {
+    color: white;
+    text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .Option:hover {
     cursor: pointer;
     background-color: #2c2c2c;
