added fields to update course title, description, and privacy setting

--- a/client/src/components/CreateCourse/CreateCourse.css
+++ b/client/src/components/CreateCourse/CreateCourse.css
@@ -5,3 +5,13 @@
     align-items: center;
     justify-content: center;
 }
+
+.CreateCourse .CourseCreatorDashboard {
+    padding: 20px 0;
+    width: 90%;
+    margin: auto;
+}
+
+.CreateCourse .CourseCreatorDashboard .Input {
+    padding: 10px;
+}
