added route to add a section to a course, with full authentication, updated schemas slightly, fixed sectioneditor to work with api and allow adding new sections to a course

--- a/client/src/components/CreateCourse/CreateCourse.css
+++ b/client/src/components/CreateCourse/CreateCourse.css
@@ -18,6 +18,10 @@
     width: 90%;
 }
 
+.CreateCourse .sectionEditorLink a {
+    color: white;
+}
+
 @media only screen and (min-width: 768px) {
     .CreateCourse .CourseCreatorDashboard {
         width: 70%;
