updated client to be ready for a loadsectioncontent get route on the api, which will enable the client to load and display more detailed section content to be edited

--- a/client/src/components/CreateCourse/CreateCourseTools/SectionEditor/SectionEditor.css
+++ b/client/src/components/CreateCourse/CreateCourseTools/SectionEditor/SectionEditor.css
@@ -1,6 +1,13 @@
 .SectionEditor {
     max-width: 100%;
-    background-color: #111111;
+    background-color: #282828;
     padding: 20px;
     text-align: center;
+}
+.SectionEditor .SectionEditorTitle {
+    text-transform: capitalize;
+    padding-bottom: 40px;
+}
+.SectionEditor .editableSectionsContainer {
+    margin-bottom: 15px;
 }
