creators can now update section descriptions

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -72,3 +72,13 @@
 .App .full-width {
     width: 100%;
 }
+
+.App .hidden {
+    display: none;
+}
+
+.App .truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
