--- a/client/src/components/CreateCourse/CreateCourseTools/EditableSection/EditableSection.css
+++ b/client/src/components/CreateCourse/CreateCourseTools/EditableSection/EditableSection.css
@@ -1,38 +1,57 @@
 .EditableSection {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    align-items: center;
-    margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .EditableSection .EditableSectionTitle:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .EditableSection .EditableSectionTitle {
-    width: 100%;
-    display: flex;
-    flex-flow: row;
-    justify-content: space-between;
-    background-color: #444444;
+  width: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  background-color: #444444;
 }
 
-.EditableSection .EditableSectionTitle>* {
-    padding: 20px 15px;
+.EditableSection .EditableSectionTitle > * {
+  padding: 20px 15px;
 }
 
 .EditableSection .sectionContentEditorContainer {
-    width: 100%;
-    background-color: #181818;
-    padding: 20px 0px;
+  width: 100%;
+  background-color: #181818;
+  padding: 20px 0px;
 }
 
 .EditableSection .EditableSectionContent {
-    width: 90%;
-    margin: auto;
+  width: 90%;
+  margin: auto;
 }
 
-.EditableSection .EditableSectionContent>* {
-    padding: 10px 0;
+.EditableSection .EditableSectionContent > * {
+  padding: 10px 0;
+}
+
+.EditableSection .EditableSectionPage {
+  background-color: #222222;
+  height: 100%;
+  display: flex;
+
+  margin: 10px;
+  height: 50px;
+}
+
+.EditableSection .EditableSectionPage a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+  text-transform: capitalize;
+  width: 100%;
 }
