added route to update page information, configured page editor to work with the route

--- a/client/src/components/CreateCourse/CreateCourseTools/PageEditor/PageEditor.css
+++ b/client/src/components/CreateCourse/CreateCourseTools/PageEditor/PageEditor.css
@@ -21,6 +21,10 @@
     margin-bottom: 10px;
 }
 
+.PageCreator .pageTitleEditor form>* {
+    margin-bottom: 10px;
+}
+
 .PageCreator .pageDescriptionEditor p {
     margin-bottom: 10px;
 }
