added editors for page content of types text, image, and youtube-video

--- a/client/src/components/CreateCourse/CreateCourseTools/PageEditor/PageEditor.css
+++ b/client/src/components/CreateCourse/CreateCourseTools/PageEditor/PageEditor.css
@@ -10,6 +10,9 @@
 .PageCreator a {
     color: steelblue;
     text-decoration: none;
+    background-color: black;
+    border-radius: 4px;
+    padding: 11px;
 }
 
 .PageCreator .pageTitleEditor {
