--- a/client/src/components/CreateCourse/CreateCourse.css
+++ b/client/src/components/CreateCourse/CreateCourse.css
@@ -19,7 +19,11 @@
 }
 
 .CreateCourse .sectionEditorLink a {
-    color: white;
+    color: steelblue;
+    text-decoration: none;
+    background-color: black;
+    border-radius: 4px;
+    padding: 11px;
 }
 
 @media only screen and (min-width: 768px) {
