--- a/client/src/components/CreateCourse/CreateCourseTools/SectionEditor/SectionEditor.css
+++ b/client/src/components/CreateCourse/CreateCourseTools/SectionEditor/SectionEditor.css
@@ -1,12 +1,22 @@
 .SectionEditor {
     max-width: 100%;
     padding: 20px;
-    text-align: center;
 }
+
 .SectionEditor .SectionEditorTitle {
     text-transform: capitalize;
-    padding-bottom: 40px;
+    padding: 40px 0;
+    text-align: center;
 }
+
 .SectionEditor .editableSectionsContainer {
     margin-bottom: 15px;
+}
+
+.SectionEditor .dashboardLink {
+    color: steelblue;
+    text-decoration: none;
+    background-color: black;
+    border-radius: 4px;
+    padding: 11px;
 }
