--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -1,7 +1,7 @@
 .Input {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
