--- a/client/src/components/TextArea/TextArea.css
+++ b/client/src/components/TextArea/TextArea.css
@@ -1,6 +1,6 @@
 .TextArea {
     display: inline-block;
-    text-align: center;
+    text-align: left;
     width: 99%;
 }
 
@@ -10,7 +10,7 @@
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     border: none;
-    border-radius: 10px;
+    border-radius: 4px;
     outline: none;
 }
 
